--- a/sbc-template.tex
+++ b/sbc-template.tex
@@ -36,25 +36,51 @@
 
 
 \section{Introdução}
-  Com a popularização do uso de serviços providos pela computação em nuvem, o consumo energético dos data centers também aumentou, chegando a 270 TWh em 2012 com uma taxa de crescimento anual composta (CAGR) de 4.4\% entre 2007 e 2012 \cite{VanHeddeghem:2014:TWI:2657027.2657141}. Buscando alternativas de evitar esse alto consumo energético das máquinas convencionais utilizadas em data centers, o uso de dispositivos com arquitetura ARM, que possuem baixo consumo energético, são uma das estratégias possíveis.\\  
+  Com a popularização do uso de serviços providos pela computação em nuvem, o consumo energético dos data centers também aumentou, chegando a 270 TWh em 2012 com uma taxa de crescimento anual composta (CAGR) de 4.4\% entre 2007 e 2012 \cite{VanHeddeghem:2014:TWI:2657027.2657141}. Buscando alternativas de evitar esse alto consumo energético das máquinas convencionais utilizadas em data centers, o uso de dispositivos com arquitetura ARM, que possuem baixo consumo energético, são uma das estratégias possíveis.
+
+
   Em \cite{Joao}, foi implementado um nó computacional utilizando uma Raspberry PI B+ afim de comparar o consumo energético em meio a nuvem.
-  Dando continuidade ao trabalho \cite{eu}, realizou-se um estudo comparando o consumo energético e o desempenho da Raspberry PI B e Raspberry PI 3 B utilizando o \textit{benchmark YCSB}. Este trabalho propõem uma comparação do consumo energético e desempenho da Raspberry PI 3 B e uma máquina com arquitetura x64. Para esta comparação foi criado um servidor em ambas máquinas, hospedando um site onde apenas a execução do \textit{request} é possível. Após escolheu-se as ferramentas necessárias para o controle de consumo de energia de ambas, já tendo em vista que a forma de medição seria dessemelhante, dada arquitetura e o consumo esperado por cada dispositivo.\\
-  Logo após iniciou-se um ataque DoS(\textit{Denial of Service}) encarregado de realizar os \textit{requests} até a queda do atual servidor, de forma a obter um resultado aproximado, para equiparação da Raspberry PI 3 e a XPS e, a viabilidade de mater um serviço de qualidade aproximada, gerando um consumo razoavelmente menor\\
-  O presente artigo está organizado da seguinte forma: na Seção~\ref{sec:trabCorrelatos} serão apresentados trabalhos relacionados, a seção~\ref{sec:metodologia} são apresentados os dispositivos utilizados e suas características físicas, alem de todas ferramentas utilizado para realização dos testes. Na Seção~\ref{sec:resultados}, são expostos os resultados obtidos após o ataque DoS e a captação de dados do consumo energético. Concluindo-se o trabalho na Seção~\ref{sec:conclusao}
+  Na continuidade do trabalho, em \cite{eu} foi realizado um estudo comparando o consumo energético e o desempenho da Raspberry PI B e Raspberry PI 3 B utilizando o \textit{benchmark YCSB}  \textbf{REFERENCIA DO BENCHMARK}. Este trabalho propõem uma comparação do consumo energético e desempenho da Raspberry PI 3 B e uma máquina com arquitetura x64. Para tais testes, criou-se um servidor em ambas as máquinas hospedando um site onde seria possível apenas executar requets de acesso, após, escolheu-se as ferramentas necessárias para o controle de consumo de energia dos dispositivos, tendo em vista que a forma de mensuração seria diferente em cada, dada pela arquitetura e pelo consumo esperada por ambas.
+
+
+
+  Posteriormente iniciou-se um ataque DoS(\textit{Denial of Service}), encarregado de realizar os \textit{requests} até o número limite ou ocasionando a queda do servidor, a fim de obter um número aproximado de o quanto a Raspberry PI 3 seria capaz de fornecer um serviço de mesma qualidade gerando um consumo energético menor.
+
+
+
+  O presente artigo está organizado da seguinte forma: na Seção~\ref{sec:trabCorrelatos} serão apresentados trabalhos relacionados, a seção~\ref{sec:metodologia} são apresentados os dispositivos utilizados e suas características físicas, além de todas ferramentas utilizado para realização dos testes. Na Seção~\ref{sec:resultados}, são expostos os resultados obtidos após o ataque DoS e a captação de dados do consumo energético. As considerações finais do trabalho se encontram na Seção~\ref{sec:conclusao}.
+
 
 \section{Trabalhos Relacionados} \label{sec:trabCorrelatos}
-  Afim de verificar a viabilidade de uso e comportamento da \textit{Small Board} em uma nuvem computacional, \cite{Joao} propôs e avaliar a substituição do hardware convencional por um hardware de baixo consumo que respeite o Service-Level-Agreement (SLA) e reduza o consumo de energia dos \textit{data centers}.\\
-  Com isso, implementou a Raspbarry PI B+ como um nodo computacional de baixo consumo, realizando as adaptações necessárias para compatibilidade com a arquitetura ARM, precisando escolher um \textit{hypervision} adequado para tal. A nuvem era composta por 10 computadores de arquitetura x64, sendo nove deles nodos computacionais e um nodo de controle, em meio a essa composição a Raspberry vinha à acrescer como mais um nodo computacional.\\
-  A medição foi realizada através da execução do bechmark YCSB (\textit{Yahoo! Cloud Serving Benchmark}) que é especificamente desenvolvido para avaliar nuvens. Os resultados foram obtidos através da vazão de operações onde acabou por demonstrar um gargalo de processamento quando comparado ao nó de um baixo consumo. Porém a implementação da Rapberry PI B+ em uma nuvem, ainda sim é vantajosa, onde as características batam com as desempenhada pelo \textit{benchmark}.\\
-  Em \cite{PiConsumo} segue a mesma preocupação com o alto consumo de energia vindo das \textit{clouds}, porém até 2012, 10,82\% da população mantem assinatura de banda larga até, mantendo 770 milhões de gateways domeśtico ao redor do mundo. Tendo um consumo de 10W cada, gerando um consumo unitário de 6,7TWh ao ano o que soma em 0,03\% na energia consumida mundialmente. Levando em consideração que os maiores consumo ocorrem por parte de maquinas com um \textit{hardware} mais poderoso, ainda sim não se pode ignorar o consumo vindo por parte de tais dispositivos, pois 43\% dos mesmo se mantem ligados diariamente e muitas vezes ociosos, durante esse período de ociosidade, poderia vir desempenhar funções de pré-carregamento para usuario (ou seja, armazenamento em cache, pré-busca de conteúdo, execução de serviços locais).\\
-  A Raspberry PI vem sendo utilizada para inúmeras aplicações no qual fomenta o uso de tais aplicações com a visão em baixo consumo energético, com isso \cite{PiConsumo} apresenta o PowerPi um modelo de  potência concentrando-se no consumo de energia da Raspberry PI a fim de derivar novas possíveis estratégias de consumo de energia.\\
-  Tais \textit{Smaal Board} vem crescendo em uso no conceito \textit{green computing}, com isso \cite{2018CLOUDSPiA}, faz uso de SDN (Software Defined Networking), que fornece uma visão logicamente centralizada da rede em um único ponto, o que permite que a rede se torne uma plataforma programável que pode se adaptar dinamicamente ao seu comportamento. Porém as \textit{cloud} vem em uma crescente expansão, aumentando em números e tamanhos os \textit{data centers}, fazendo com que a infraestrutura de tais aumente conforme há o aumento da demanada o que torna uma real escalada nas nuvens, porém SDN traz consigo a capacidade da redução da complexidade de tais redes gerando uma visão mais simples das das mesmas. Com isso apresentam o CLOUDS-Pi uma nuvem com composição heterogenia no qual integou-se as Raspberry PI, Contruindo uma rede de pequena escala, compondo esforços para união da ferramenta ao \textit{hardware} de baixo consumo.\\    
   
+ 
+   \cite{Joao} propôs avaliar a substituição do hardware convencional por um hardware de baixo consumo que respeite o Service-Level-Agreement (SLA) e reduza o consumo de energia dos \textit{data centers}, assim tornando viável o uso de uma \textit{Small Board} em uma nuvem computacional.
+
+%=======================revisei até aqui
+  Com isso, implementou a Raspbarry PI B+ como um nodo computacional de baixo consumo, realizando as adaptações necessárias para compatibilidade com a arquitetura ARM, precisando escolher um \textit{hypervision} adequado para tal. A nuvem era composta por 10 computadores de arquitetura x64, sendo nove deles nodos computacionais e um nodo de controle, em meio a essa composição a Raspberry vinha à acrescer como mais um nodo computacional.
+
+
+  A medição foi realizada através da execução do bechmark YCSB (\textit{Yahoo! Cloud Serving Benchmark}) que é especificamente desenvolvido para avaliar nuvens. Os resultados foram obtidos através da vazão de operações onde acabou por demonstrar um gargalo de processamento quando comparado ao nó de um baixo consumo. Porém a implementação da Rapberry PI B+ em uma nuvem, ainda sim é vantajosa, onde as características batam com as desempenhada pelo \textit{benchmark}.
+
+
+  Em \cite{PiConsumo} segue a mesma preocupação com o alto consumo de energia vindo das \textit{clouds}, porém até 2012, 10,82\% da população mantem assinatura de banda larga até, mantendo 770 milhões de gateways domeśtico ao redor do mundo. Tendo um consumo de 10W cada, gerando um consumo unitário de 6,7TWh ao ano o que soma em 0,03\% na energia consumida mundialmente. Levando em consideração que os maiores consumo ocorrem por parte de maquinas com um \textit{hardware} mais poderoso, ainda sim não se pode ignorar o consumo vindo por parte de tais dispositivos, pois 43\% dos mesmo se mantem ligados diariamente e muitas vezes ociosos, durante esse período de ociosidade, poderia vir desempenhar funções de pré-carregamento para usuario (ou seja, armazenamento em cache, pré-busca de conteúdo, execução de serviços locais).
+
+
+  A Raspberry PI vem sendo utilizada para inúmeras aplicações no qual fomenta o uso de tais aplicações com a visão em baixo consumo energético, com isso \cite{PiConsumo} apresenta o PowerPi um modelo de  potência concentrando-se no consumo de energia da Raspberry PI a fim de derivar novas possíveis estratégias de consumo de energia.
+
+
+  Tais \textit{Smaal Board} vem crescendo em uso no conceito \textit{green computing}, com isso \cite{2018CLOUDSPiA}, faz uso de SDN (Software Defined Networking), que fornece uma visão logicamente centralizada da rede em um único ponto, o que permite que a rede se torne uma plataforma programável que pode se adaptar dinamicamente ao seu comportamento. Porém as \textit{cloud} vem em uma crescente expansão, aumentando em números e tamanhos os \textit{data centers}, fazendo com que a infraestrutura de tais aumente conforme há o aumento da demanada o que torna uma real escalada nas nuvens, porém SDN traz consigo a capacidade da redução da complexidade de tais redes gerando uma visão mais simples das das mesmas. Com isso apresentam o CLOUDS-Pi uma nuvem com composição heterogenia no qual integou-se as Raspberry PI, Contruindo uma rede de pequena escala, compondo esforços para união da ferramenta ao \textit{hardware} de baixo consumo.    
+  
+
+
 \section{Metodologia} \label{sec:metodologia}
   Nesta seção aborda-se a metodologia aplicada na realização do trabalho, o \textit{hardware} utilizado na comparação, as ferramentas utilizadas e aplicada alem das maneiras optadas para mensuração da energia consumida para que assim pudesse ser aplicado o método de análise estatística dos resultados.
 
+
   \subsection{Ataque de negação de serviço} \label{sec:ddos}
-    Populares no âmbito de redes, os ataques do tipo DoS, ocorrem através do envio indiscriminado de requisições a um computador ou servidor alvo, causando-o uma sobrecarga, visando causar a indisponibilidade do serviço. Esses alvos escolhidos pelos atacantes(quem coordena o ataque) tenta tornar o conteúdo hospedado indisponível para qualquer outro utilizador, não se caracterizando como invasão de sistema visto que somente indisponibiliza o serviço. Pode-se dizer que é basicamente o ocorrido com telefonias em datas comemorativas como "noites de natal e ano novo, quando milhares de pessoas decidem, simultaneamente, cumprimentar à meia-noite parentes e amigos no Brasil e no exterior. Nos cinco minutos posteriores à virada do ano, muito provavelmente, você simplesmente não conseguirá completar a sua ligação, pois as linhas telefônicas estarão saturadas"\cite{ddOS}.\\
+    Populares no âmbito de redes, os ataques do tipo DoS, ocorrem através do envio indiscriminado de requisições a um computador ou servidor alvo, causando-o uma sobrecarga, visando causar a indisponibilidade do serviço. Esses alvos escolhidos pelos atacantes(quem coordena o ataque) tenta tornar o conteúdo hospedado indisponível para qualquer outro utilizador, não se caracterizando como invasão de sistema visto que somente indisponibiliza o serviço. Pode-se dizer que é basicamente o ocorrido com telefonias em datas comemorativas como "noites de natal e ano novo, quando milhares de pessoas decidem, simultaneamente, cumprimentar à meia-noite parentes e amigos no Brasil e no exterior. Nos cinco minutos posteriores à virada do ano, muito provavelmente, você simplesmente não conseguirá completar a sua ligação, pois as linhas telefônicas estarão saturadas"\cite{ddOS}.
+
+
     O ataque do tipo DoS envolve somente um atacante ou seja é necessário somente um único computador para realizar inúmeras requisições ao alvo, ataques de tais tipos pode vir a derrubar somente servidores fracos e computadores comuns com pouca banda e com baixas especificações técnicas. Diferente dos ataques de DDoS (\textit{Distributed Denial of Service}), onde um computador mestre(maquina que recebe os parâmetros para o ataque e controla os zumbis) pode vir a gerenciar milhões de computadores chamados de zumbis(programas de agente, que se conecta de volta a um host mestre predefinido), que fora plantado em hosts remotos e ficam ociosos esperando o comando de ataque a vitima(alvo do ataque), ou seja, dessa forma os ataque são gerados por milhares de hosts incessantemente gerando centenas de megabits por segundo de inundação \cite{ddOS2}. 
   
   \subsection{Ataque utilizando DoS} \label{sec:ataquedos}
@@ -73,8 +99,12 @@
   % Prentendo espesificar o que esta hospedado no servidor
   \subsection{Hospede} \label{sec:site}
     %Todos esse sites ja sao utilizados no portugues ? precisa-se colocar em italico ?
-    Para uma simulação mais próxima da realidade, hospedou-se um \textit{site} insignificante em processos comparado ao que se tem atualmente no mercado disponível, porém mesmo que simples, pode-se simular os \textit{request}, para adquirir os dados que desejávamos e ver até que ponto a Raspberry PI 3 conseguia competir com o \textit{desktop} XPS.\\
-    Mesmo tendo em vista que muitos dos \textit{sites} atuais trabalham com um poderoso banco de dados por trás deles, pelo fato de cadastros pessoais ou a alta do \textit{e-commerce}, temos ainda \textit{sites} simples dos quais não se exige um grande poder do servidor para mante-los estáveis para acesso dos usuários, não sendo o atual foco do trabalho a complexidade do hospede e sim ter algo com que se possa trabalhar nos testes.\\
+    Para uma simulação mais próxima da realidade, hospedou-se um \textit{site} insignificante em processos comparado ao que se tem atualmente no mercado disponível, porém mesmo que simples, pode-se simular os \textit{request}, para adquirir os dados que desejávamos e ver até que ponto a Raspberry PI 3 conseguia competir com o \textit{desktop} XPS.
+
+
+    Mesmo tendo em vista que muitos dos \textit{sites} atuais trabalham com um poderoso banco de dados por trás deles, pelo fato de cadastros pessoais ou a alta do \textit{e-commerce}, temos ainda \textit{sites} simples dos quais não se exige um grande poder do servidor para mante-los estáveis para acesso dos usuários, não sendo o atual foco do trabalho a complexidade do hospede e sim ter algo com que se possa trabalhar nos testes.
+
+
     Composto por somente uma \textit{homepage} para atender os \textit{request}, o \textit{site} conta com uma estrutura simples em \textit{html}, \textit{css} juntamente a \textit{javascript}, tal \textit{Template} fora adquirida de forma totalmente gratuita no Free CSS \cite{sitesFree}, garantindo assim um hospede para os testes.
 
 
